# fastapi-sql-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  prometheus.yaml  pyproject.toml
scripts/: build.sh  clean.sh  run.sh
src/app/: main.py
src/app/api/: __init__.py  api.py  dependencies.py
src/app/api/v1/: __init__.py  api_v1_router.py
src/app/api/v1/routes/: user.py
src/app/core/: config.py  logger.py
src/app/core/db/: __init__.py  database.py
src/app/core/schemas/: users.py
src/app/core/security/: jwt.py
src/app/crud/: __init__.py  base_crud.py
