[project]
name = "fastapi-sql-template"
version = "0.1.0"
description = "A RESTful API made using FastAPI with SQL databases. "
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "cryptography>=45.0.6",
    "sqlmodel>=0.0.29",
]
